infrastructure/workflow/exposure/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: workflow
  namespace: controller-workflow
  annotations:
    external-dns.alpha.kubernetes.io/hostname: workflow.internal.${cluster}.${domain}
    external-dns.alpha.kubernetes.io/target: internal.${cluster}.${domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - internal
  routes:
    - match: Host(`workflow.internal.${cluster}.${domain}`)
      kind: Rule
      services:
        - name: argo-workflows-server
          port: 2746
  tls:
    secretName: wildcard.${cluster}.${domain}.tls
